fix: Show researcher header outside progress dashboard view [PT-187325112]
The response details and feedback views use fixed elements under the header and have a top value set which was covering up the optional researcher header.

This also fixes the bottom 3px white border (defined using a bottom-margin) disappearing when the user switched out of the progress dashboard.

--- a/css/portal-dashboard/header.less
+++ b/css/portal-dashboard/header.less
@@ -7,7 +7,7 @@
   align-items: center;
   box-sizing: border-box;
   height: @header-height;
-  margin-bottom: 3px;
+  margin-bottom: @header-margin-bottom;
   min-width: 1100px;
   padding: 0 20px;
   background-color: @cc-teal-light4;
@@ -270,8 +270,9 @@
 }
 
 .researcherHeader {
+  height: @researcher-header-height;
   background-color: #0592af;
-  padding: 5px 15px;
+  padding: @researcher-header-topbottom-padding 15px;
   color: white;
 }
 
