--- a/css/portal-dashboard/portal-dashboard-app.less
+++ b/css/portal-dashboard/portal-dashboard-app.less
@@ -26,7 +26,7 @@
 
   .responseDetails {
     position: fixed;
-    top: @header-height;
+    top: @header-total-height;
     bottom: 0;
     padding: 0;
     box-sizing: border-box;
@@ -38,6 +38,10 @@
     z-index: 1;
     display: flex;
     flex-direction: column;
+
+    &.isResearcher {
+      top: @header-total-height + @researcher-header-total-height;
+    }
   }
 
 }
